# ChataApp

./: .gitignore  CMakeLists.txt  MsgManager.h  README.md  resource.qrc
Client/: CMakeLists.txt
Client/qml/: imgPreviewWindow.qml
Client/source/include/: LoginModel.h
Client/source/network/: FileTransManager.cpp  FileTransManager.h  FileTransferTask.cpp  FileTransferTask.h  FlexThreadPool.h  ThreadPool.cpp  ThreadPool.h
Client/source/src/: ChatSessionModel.cpp  OCRProcess.cpp
Server/: .gitignore  CMakeLists.txt
Server/source/include/: AsyncMD5.h  FileIOHandler.h  FileRecordStore.h  FileTransManager.h  FileTransferDownLoadTask.h  FileTransferTask.h  FileTransferUploadTask.h  MD5Helper.h  MessageRecordStore.h
Server/source/src/: AsyncMD5.cpp  ConnectManager.cpp  FileIOHandler.cpp  FileRecordStore.cpp  FileTransferDownLoadTask.cpp  FileTransferTask.cpp  FileTransferUploadTask.cpp  MD5Helper.cpp  MessageRecordStore.cpp
docs/: 消息文档.txt
qml/: ChatPage.qml  ChatView.qml  ImgPreviewWindow.qml  LlamaChatWindow.qml  Main.qml  MessageDelegate.qml  UserInfoDelegate.qml
source/: ChatItemListModel.cpp  ChatItemListModel.h  ChatSessionModel.cpp  ChatSessionModel.h  ConnectManager.cpp  ConnectManager.h  MsgManager.cpp  RequestManager.cpp  RequestManager.h
source/include/: AsyncMD5.h  ChatItemListModel.h  ConnectManager.h  FileIOHandler.h  FileRecordStore.h  FileTransManager.h  FileTransferDownLoadTask.h  FileTransferTask.h  FileTransferUploadTask.h  LlamaClient.h  LlamaModel.h  LlamaToolHelper.h  LoginUserManager.h  MD5Helper.h  MessageRecordStore.h  ModelManager.h  MsgManager.h  stdafx.h
source/network/: AsyncMD5.cpp  AsyncMD5.h  FileIOHandler.cpp  FileIOHandler.h  FileTransManager.cpp  FileTransManager.h  FileTransferDownLoadTask.cpp  FileTransferDownLoadTask.h  FileTransferUpLoadTask.cpp  FileTransferUpLoadTask.h  FlexThreadPool.h  MD5Helper.cpp  MD5Helper.h  QCustomTcpSession.cpp  SafeStl.h  ThreadPool.cpp  ThreadPool.h
source/src/: 3DModelViewerModel.cpp  AISummaryModel.cpp  AsyncMD5.cpp  ChatItemListModel.cpp  ChatSessionModel.cpp  ConnectManager.cpp  FileIOHandler.cpp  FileRecordStore.cpp  FileTransManager.cpp  FileTransferDownLoadTask.cpp  FileTransferTask.cpp  FileTransferUploadTask.cpp  LlamaClient.cpp  LlamaModel.cpp  LlamaToolHelper.cpp  LoginModel.cpp  LoginUserManager.cpp  MD5Helper.cpp  MessageRecordStore.cpp  ModelManager.cpp  MsgManager.cpp  RequestManager.cpp  main.cpp
